--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
