--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "node-sass": "^7.0.3",
+    "posthog-js": "^1.328.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sass": "^1.97.2"
   }
 }
